--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=ShortUrl
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3ZzG9YIAWb9ktIurihXQF0QqNFgFkzc1VoZGCraTTrQ=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -62,3 +62,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+GOOGLE_SAFE_BROWSING_API_KEY="ADD_YOUR_GOOGLE_SAFE_BROWSING_API_KEY_HERE"
